Deploy updated Pokemon TCG app with battle feature

--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/images/logo.png":["assets/images/logo.png"],"assets/images/main.jpg":["assets/images/main.jpg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/images/logo.png":["assets/images/logo.png"],"assets/images/main.jpg":["assets/images/main.jpg"],"assets/images/versus.jpg":["assets/images/versus.jpg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
